force-app/main/default/objects/Maintenance_Request__c/fields/Issue_Description__c.field-meta.xml
<CustomField>
    <fullName>Issue_Description__c</fullName>
    <label>Issue Description</label>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>