force-app/main/default/objects/Maintenance_Request__c/fields/Resolved__c.field-meta.xml
<CustomField>
    <fullName>Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the maintenance request has been resolved</description>
    <label>Resolved</label>
    <type>Checkbox</type>
</CustomField>