force-app/main/default/objects/Maintenance_Request__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Maintenance RequestS</relationshipLabel>
    <relationshipName>Maintenance_RequestS</relationshipName>
    <type>Lookup</type>
</CustomField>