force-app/main/default/objects/Maintenance_Request__c/validationRules/Urgent_Requires_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Urgent_Requires_Description</fullName>
    <active>true</active>
    <description>Throws an error if Priority__c equals 'Urgent' and Issue_Description__c is blank</description>
    <errorConditionFormula>AND(
    Priority__c = "Urgent",
    ISBLANK(Issue_Description__c)
)</errorConditionFormula>
    <errorDisplayField>Issue_Description__c</errorDisplayField>
    <errorMessage>Description is required when Priority is Urgent</errorMessage>
</ValidationRule>